# Clustering-algorithms-on-GPU

./: README.md
CPU/: CMakeLists.txt  a.out  benchmark.h  cpu.cpp  cpu.h  includes.h  main.cpp  meanshift.h  test.h  utils.h
CPU/Plotting/: dbscan-0.csv  dbscan-1.csv  dbscan-2.csv  dbscan-3.csv  dbscan-4.csv  dbscan-5.csv  dbscan-7.csv  dbscan-8.csv  kmeans-0.csv  kmeans-1.csv  kmeans-2.csv  kmeans-3.csv  kmeans-4.csv  kmeans-5.csv  kmeans-7.csv  kmeans-8.csv  meanshift-0.csv  meanshift-1.csv  meanshift-2.csv  meanshift-3.csv  meanshift-4.csv  meanshift-5.csv  plot.py
CPU/dataset generation/: 0.csv  1.csv  2.csv  3.csv  4.csv  5.csv  7.csv  8.csv  gen.py
GPU/: CMakeLists.txt  benchmark.cuh  dbscan.cuh  gpu.cuh  includes.cuh  kmeans.cuh  main.cu  utils.cuh
GPU/Plotting/: kmeans-0.csv  kmeans-1.csv  kmeans-2.csv  kmeans-3.csv  kmeans-4.csv  kmeans-5.csv  kmeans-7.csv  kmeans-8.csv
Main/: CMakeLists.txt  cpu.cu  cpu.cuh  main.cu
Report/: Report_Project_01_Group_01.aux  Report_Project_01_Group_01.bib  Report_Project_01_Group_01.fdb_latexmk  Report_Project_01_Group_01.fls  Report_Project_01_Group_01.out  Report_Project_01_Group_01.tex  acmguide.aux  acmguide.bbl  acmguide.blg  acmguide.idx  acmguide.out  acmguide.toc
